<package>
  <name>acc_finder</name>
  <version>1.0.0</version>
  <description>This package contains two small tools to help configure the navigation pipeline. The node min_max_finder.py prints the minimum and maximum linear and angular speed of the robot; the node acc_finder.py prints the time needed to achieve maximum speed.</description>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/acc_finder</url>

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
