<package>
  <name>battery_guard</name>
  <version>1.0.0</version>
  <description>battery_guard</description>
  <maintainer email="mgoerner@uni-osnabrueck.de">Michael Goerner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/battery_guard</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Michael Goerner</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>sound_play</run_depend>

</package>
