<package>
  <name>joint_state_muxer</name>
  <version>1.0.0</version>
  <description>joint_state_muxer</description>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/joint_state_muxer</url>

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdfdom_py</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdfdom_py</run_depend>

</package>
