<package>
  <name>move_base_straight</name>
  <version>1.0.0</version>
  <description>move_base_straight</description>
  <maintainer email="thgedick@uos.de">Thorsten Gedicke</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/move_base_straight</url>

  <author>Thorsten Gedicke</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>

</package>
