<package>
  <name>rotunit_snapshotter</name>
  <version>0.1.0</version>
  <description>
    This modul can be used to assemble a point cloud from a rotating laserscanner.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/rotunit_snapshotter</url>
  <author>jspricke</author>
  <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
</package>
