<package>
  <name>tf_publisher_gui</name>
  <version>1.0.0</version>
  <description>This is a simple GUI for publishing a single TF transform.</description>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tf_publisher_gui</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>wxpython</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>wxpython</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>
