<package>
  <name>uos_common_urdf</name>
  <version>1.0.0</version>
  <description>This package contains URDF descriptions of the UOS robots.</description>
  <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_common_urdf</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jochen Sprickerhof</author>
  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>diffdrive_gazebo_plugin</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>diffdrive_gazebo_plugin</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>xacro</test_depend> -->
  <!-- <test_depend>gazebo_plugins</test_depend> -->
  <!-- <test_depend>diffdrive_gazebo_plugin</test_depend> -->

</package>
