<package>
  <name>uos_common_urdf</name>
  <version>1.0.0</version>
  <description>This package contains URDF descriptions of the UOS robots.</description>
  <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_common_urdf</url>

  <author>Jochen Sprickerhof</author>
  <author>Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_plugins</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_plugins</run_depend>

</package>
