<package>
  <name>uos_diffdrive_teleop</name>
  <version>1.0.0</version>
  <description>uos_diffdrive_teleop</description>
  <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_diffdrive_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jochen Sprickerhof</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ps3joy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

</package>
