<package>
  <name>uos_diffdrive_teleop</name>
  <version>1.0.1</version>
  <description>uos_diffdrive_teleop</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_diffdrive_teleop</url>

  <author>Jochen Sprickerhof</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ps3joy</run_depend>

</package>
