<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uos_diffdrive_teleop</name>
  <version>2.0.0</version>
  <description>uos_diffdrive_teleop</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD-3</license>

  <url type="website">http://ros.org/wiki/uos_diffdrive_teleop</url>

  <author>Jochen Sprickerhof</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="amock@uos.de">Alexander Mock</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ps3joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
