<package>
  <name>uos_gazebo_worlds</name>
  <version>1.0.0</version>
  <description>Gazebo world and model files for UOS.</description>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_gazebo_worlds</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>gazebo_ros</test_depend> -->

<export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
</export>

</package>
