<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uos_maps</name>
  <version>2.0.0</version>
  <description>Navigation maps of the Osnabrueck University</description>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_maps</url>

  <author email="amock@uos.de">Alexander Mock</author>
  <author>Martin Guenther</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
